--- a/app/views/words/edit.html.erb
+++ b/app/views/words/edit.html.erb
@@ -13,37 +13,40 @@
     <div class="edit-contents"></div>
       <div class="word-kana-wrap">
         <div class="title-wrap">
-          <div class="kana-form-title">kana</div>
+          <%= f.label :kana, "kana", class: "kana-form-title" %>
           <span class="word-required">*required</span>
         </div>
         <%= f.text_field :kana, class: "kana-text" %>
       </div>
       <div class="word-kanji-wrap">
-        <div class="kanji-form-title">kanji
+        <div class="title-wrap">
+          <%= f.label :kanji, "kanji", class: "kanji-form-title" %>
         </div>
         <%= f.text_field :kanji, class: "kanji-text" %>
       </div>
       <div class="word-english-wrap">
         <div class="title-wrap">
-          <div class="english-form-title">english</div>
+          <%= f.label :english, "english", class: "english-form-title" %>
           <span class="word-required">*required</span>
         </div>
         <%= f.text_field :english, class: "english-text" %>
       </div>
       <div class="word-class-wrap">
         <div class="title-wrap">
-          <div class="class-form-title">word class</div>
+          <%= f.label :word_class_id, "word class", class: "class-form-title" %>
           <span class="word-required">*required</span>
         </div>
         <%= f.collection_select(:word_class_id, WordClass.all, :id, :name, {}, {class: "class-select"}) %>
       </div>
       <div class="image">
-        <div class="image-form-title">image</div>
+        <div class="title-wrap">
+          <%= f.label :image, "image", class: "image-form-title" %>
+        </div>
         <%= f.file_field :image, class: "image-button"%>
       </div>
       <div class="explanation">
         <div class="title-wrap">
-          <div class="explanation-form-title">explanation</div>
+          <%= f.label :explanation, "explanation", class: "explanation-form-title" %>
           <span class="word-required">*required</span>
         </div>
         <%= f.text_area :explanation, class:"explanation-text" %>
