--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,7 +14,7 @@
         <ul class="header-right-lists">
           <li class="user_name"><%= current_user.nickname %></li>
           <li class="post-link"><%= link_to image_tag('pen_button.png', class:"header-right-button"), new_word_path %></li>
-          <li><%= image_tag 'my_page_button.png', class:"header-right-button" %>
+          <li class="my-page-lists"><%= image_tag 'my_page_button.png', class:"header-right-button" %>
             <ul class="sub-my-page"> 
               <li><%= link_to "My Posts", user_path(current_user.id), class: "header-right-sub" %></li> 
               <li><%= link_to "My Favorites", user_favorites_path(current_user.id), class: "header-right-sub" %></li>
