--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -53,6 +53,7 @@
       <div class="info-table-details">details:</div>
       <div class="info-details-box"><%= simple_format(@word.explanation) %></div>
     </div>
+    <p class="info-author">by <%= @word.user.nickname %></p>
   </div>
 </div>
 
